--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       </p>  
         <p class="time">  1 week ago</p>
     </div>
-    <img src="./assets/images/image-chess.webp" class="picture">
+    <img src="./assets/images/image-chess.webp" class="picture" alt="imagen ajedrez">
   </div>
 
   
